@@ -1,5 +1,5 @@
 ##prevwd <- setwd("C:/G/Project/Oris/eurasia/figSw")
-## function for converting graphic files with the 
+## function for converting graphic files with the
 ## ImageMagick mogrify function
 
 ## author: G. Ritschard
@@ -8,31 +8,37 @@
 #convert.g(path="C:/G/Project/biomining/Traminer/trunk/articles/TypicalLifeCourses/Graphiques")
 #convert.g(path="C:/G/Project/biotree/parcoursEric/figSw", from="pdf", to="jpg")
 
-convert.g <- function(path = NULL, 
+convert.g <- function(path = NULL,
         fileroot= "*",
         from = "pdf",
         to = "png",
         create.path = TRUE,
         options = NULL)
     {
-    
+
     if ((fileroot %in% c("",".")) | !is.character(fileroot)){
         warning("Invalid 'fileroot' value, no conversion has been done!")
         return(NULL)
     }
-    
+
     v.fileroot <- strsplit(fileroot, "", fixed=TRUE)
     if (v.fileroot[length(v.fileroot)] != ".")
         {
         fileroot <- paste(fileroot,".",sep="")
         }
-    
-    if (!file.exists(path)){
-        warning(paste(path, "not found, no conversion has been done!"))
-        return(NULL)
+
+    if (!is.null(path)){
+        if (!file.exists(path)){
+            warning(paste(path, "not found, no conversion has been done!"))
+            return(NULL)
+        }
     }
 
-    if (fileroot != "*." & !file.exists(file <- paste(path,"\\\\",fileroot,from,sep=""))){
+    if (!is.null(path))
+        ppath <- paste0(path,"\\\\")
+    else
+        ppath <- ""
+    if (fileroot != "*." & !file.exists(file <- paste(ppath,fileroot,from,sep=""))){
         warning(paste(file, "not found, no conversion has been done!"))
         return(NULL)
     }
@@ -44,7 +50,7 @@ convert.g <- function(path = NULL,
     else{
         prevwd <- getwd()
     }
-    
+
     if(create.path){
         to.path <- paste(to," ", sep="")
         dir.create(to, showWarnings = FALSE)
@@ -52,7 +58,7 @@ convert.g <- function(path = NULL,
     else{
         to.path <- " "
     }
-    
+
     if(is.null(options)){
         if(to %in% c("png","jpg")){
             options <- "-quality 100 -density 150x150"
@@ -60,15 +66,14 @@ convert.g <- function(path = NULL,
         else {
             options <- ""
         }
-        
+
     }
     options <- paste(" ", options, sep="")
-    
+
     fileroot <- paste(" ", fileroot, sep="")
-    
-    mogr.str <- paste("mogrify -path ", to.path, "-format ", to, options, fileroot, from, sep="")
+
+    mogr.str <- paste("magick mogrify -path ", to.path, "-format ", to, options, fileroot, from, sep="")
     shell(mogr.str)
     setwd(prevwd)
-    return(mogr.str) 
+    return(mogr.str)
 }
-
